--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-101.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-101.htm
@@ -1,62 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Comparing resources with repository versions</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Comparing resources with repository versions</H1>
-<P CLASS="Intro"> To compare workbench resources with those in the repository: 
-<ol>
-  <li> 
-    <p class="Intro"> Select a resource in the Navigator view. 
-  </li>
-  <li> 
-    <p class="Intro">From the resource's pop-up menu, select one of the following 
-      menu items: 
-    <ul class="UnorderedList">
-      <li class="Item"> <b> Compare With &gt; Latest from Repository</b> - compare 
-        the workbench resource with the latest resources currently committed to 
-        the branch that the local project is shared with. A compare editor will 
-        be opened. This editor will display a tree of all resource differences 
-        between the workspace resource and the latest resources in the repository.</li>
-      <li class="Item"> <b> Compare With &gt; Branch or Version</b> - compare 
-        the workbench resource with a specific version or branch that you select 
-        in the repository. A compare editor will be opened. The editor will display 
-        a tree of all resource differences between the workspace resource and 
-        the resources in the specified version or branch.</li>
-      <li class="Item"> <b> Compare With &gt; Revision</b> - (available only on 
-        a file) compare the workbench file with another revision of the file. 
-        A compare editor will be opened. The editor will display a table of all 
-        available revisions of the selected file. Selecting one of the revisions 
-        will show the differences between the workspace revision and the selected 
-        revision. </li>
-    </ul>
-  </li>
-</ol>
-
-<P CLASS="Intro"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-  <a href="../concepts/concepts-29.htm">Three-way comparisons</a><br>
- <a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
-<p>
-
-<img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-115.htm">Synchronizing with the repository</a><br>
-<a href="tasks-68b.htm">Setting preferences for comparing files</a><br>
-</p>
-
-<p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27">
-<br><a href="../reference/ref-47.htm">CVS</a>
-<br><a href="../reference/ref-25.htm">Compare editor</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Comparing resources with repository versions</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Comparing resources with repository versions</H1><P>To compare workbench resources with those in the repository:</p><ol>  <li>Select a resource in the Navigator view.</li>  <li>From the resource's pop-up menu, select one of the following menu items:     <ul>      <li><b>Compare With &gt; Latest From Repository</b> - compare the workbench         resource with the latest resources currently committed to the branch that         the local project is shared with. A compare editor will be opened. This         editor will display a tree of all resource differences between the workspace         resource and the latest resources in the repository.</li>      <li><b>Compare With &gt; Branch or Version</b> - compare the workbench resource         with a specific version or branch that you select in the repository. A         compare editor will be opened. The editor will display a tree of all resource         differences between the workspace resource and the resources in the specified         version or branch.</li>      <li><b>Compare With &gt; Revision</b> - (available only on a file) compare         the workbench file with another revision of the file. A compare editor         will be opened. The editor will display a table of all available revisions         of the selected file. Selecting one of the revisions will show the differences         between the workspace revision and the selected revision. </li>    </ul>  </li></ol><P CLASS="Intro"><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-29.htm">Three-way comparisons</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-115.htm">Synchronizing with the repository</a><br><a href="tasks-68b.htm">Setting preferences for comparing files</a><br></p><p><img border="0" src="../images/ngrelr.gif" alt="Related references" width="159" height="27"><br><a href="../reference/ref-47.htm">CVS</a><br><a href="../reference/ref-25.htm">Compare editor</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
