--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-105.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-105.htm
@@ -1,56 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Changing CVS team settings</title>
-
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Changing CVS team settings</H1>
-<P CLASS="Intro">
-
-You can customize the settings related to a number of CVS team views and operations.
-<ol>
-  <li>
-    <p CLASS="Para">From the main menu bar, select <b>Window &gt; Preferences</b>.&nbsp;</li>
-  <li>
-    <p CLASS="Para">On the left side of the Preferences window, select the <b>Team</b>
-    category.</li>
-  <li>
-    <p CLASS="Para">You will see a number of general <b>Team</b> options.  These options can be used
-    by any Eclipse integrated repository.  In our case, they are all applicable to CVS.
-  </li>
-  <li>
-    <p CLASS="Para">You will also see a <b>CVS</b> category.  Select it. You will see various
-    CVS options.  If you expand the <b>CVS</b> category, you will see additional CVS
-    preference pages.
-  </li>
-</ol>
-<p CLASS="Para">Here are some examples of settings that you can change in the <b>CVS</b> section:</p>
-<ul>
-  <li>
-    <p CLASS="Para">To filter out receiving empty directories when updating or synchronizing,
-    select the <b>Prune empty directories</b> toggle.</li>
-  <li>
-    <p CLASS="Para">To automatically save the contents of modified editors
-    prior to synchronize, commit, etc., choose <b>Auto-save</b>.
-  </li>
-</ul>
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming with CVS</a>
-</p>
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-115.htm">Synchronizing with the repository</a><br>
-<a href="tasks-114.htm">Committing</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Changing CVS team settings</title></HEAD><BODY BGCOLOR="#ffffff"><H1>Changing CVS team settings</H1><P>You can customize the settings related to a number of CVS team views and operations.</p><ol>  <li>From the main menu bar, select <b>Window &gt; Preferences</b>.</li>  <li>On the left side of the Preferences window, select the <b>Team</b> category.</li>  <li>You will see a number of general <b>Team</b> options. These options can     be used by any Eclipse integrated repository. In our case, they are all applicable     to CVS.</li>  <li>You will also see a <b>CVS</b> category. Select it. You will see various     CVS options. If you expand the <b>CVS</b> category, you will see additional     CVS preference pages.</li></ol><p>Here are some examples of settings that you can change in the <b>CVS</b> section:</p><ul>  <li>To filter out receiving empty directories when updating or synchronizing,     select the <b>Prune empty directories</b> toggle.</li>  <li>To automatically save the contents of modified editors prior to synchronize,     commit, etc., choose <b>Auto-save</b>.</li></ul><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-115.htm">Synchronizing with the repository</a><br><a href="tasks-114.htm">Committing</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
