--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d1b.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-100d1b.htm
@@ -1,51 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Overriding or removing resource ignore patterns</title>
-<meta name="keyword" content="team">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head">
-Overriding or removing resource ignore patterns</H1>
-
-
-<p CLASS="Para" Label="Type">After you have added global file-matching patterns
-to the list of files to be ignored for version management, you may wish to occasionally
-override the &quot;ignore&quot;.</p>
-
-
-<ol>
-  <li>
-    <p CLASS="Para" Label="Type">From the main menu bar, select <b>Window
-    &gt; Preferences &gt; Team &gt; Ignored Resources</b>.</li>
-  <li>
-    <p CLASS="Para" Label="Type">To temporarily override one or more of the
-    file-matching patterns, clear their checkboxes. </li>
-  <li>
-    <p CLASS="Para" Label="Type">Click <b>OK</b>. </li>
-</ol>
-<p CLASS="Para" Label="Type">Files that match the patterns you have deselected
-will be considered for version control.</p>
-<p CLASS="Para" Label="Type">To permanently remove a pattern, select it and
-click <b>Remove</b>. </p>
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
-<a href="../concepts/concepts-26.htm">Team programming with CVS</a><br>
-</p>
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
-<a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br>
-<a href="tasks-100d1.htm">Creating a global ignore pattern</a><br>
-<a href="tasks-115.htm">Synchronizing with the repository</a><br>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Overriding or removing resource ignore patterns</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1>Overriding or removing resource ignore patterns</H1><p>After you have added global file-matching patterns to the list of files to   be ignored for version management, you may wish to occasionally override the   &quot;ignore&quot;.</p><ol>  <li>From the main menu bar, select <b>Window &gt; Preferences &gt; Team &gt;     Ignored Resources</b>.</li>  <li>To temporarily override one or more of the file-matching patterns, clear     their checkboxes.</li>  <li>Click <b>OK</b>.</li></ol><p>Files that match the patterns you have deselected will be considered for version   control.</p><p>To permanently remove a pattern, select it and click <b>Remove</b>.</p><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-100d.htm">Version control life cycle: adding and ignoring resources</a><br><a href="tasks-100d1.htm">Creating a global ignore pattern</a><br><a href="tasks-115.htm">Synchronizing with the repository</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
