--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-103.htm
@@ -1,60 +1,1 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML>
-<HEAD>
-<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
-<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
-
-<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
-<title>Replacing resources in the workbench</title>
-<meta name="keyword" content="team">
-</HEAD>
-<BODY BGCOLOR="#ffffff">
-<H1 CLASS="Head"> Replacing resources in the workbench</H1>
-<P CLASS="Intro">
-To replace workbench resources with versions in the repository:
-<ol>
-  <li> 
-    <p CLASS="Intro"> Select a resource in the Navigator view.
-  </li>
-  <li> 
-    <p CLASS="Intro">From the resource's pop-up menu, select one of the following 
-      menu items: 
-    <UL CLASS="UnorderedList">
-      <LI CLASS="Item"> <b> Replace With &gt; Latest from Repository</b> - replace 
-        the workbench resource with the latest resources currently committed to 
-        the branch that the local project is shared with.</LI>
-      <LI CLASS="Item"> <b> Replace With &gt; Branch or Version</b> - replace 
-        the workbench resource with a specific version or branch that you select 
-        in the repository. When you select this option, another window opens, 
-        so that you can browse through the branch and version tags in the repository 
-        and select the one that you want.</LI>
-      <LI CLASS="Item"> <b> Replace With &gt; Revision</b> - (available only on 
-        a file) replace the workbench file with another revision of the file. 
-        When you select this option, a dialog opens to allow you to select a revision 
-        from the list of available ones. A test window displays the comparison 
-        between the local revision and the selected remote revision.</LI>
-    </UL>
-  </li>
-</ol>
-
-
-<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27">
-<br><a href="../concepts/concepts-26.htm">Team programming with CVS</a>
-<br><a href="../concepts/concepts-27b.htm">Branches</a>
-<br><a href="../concepts/concepts-27.htm">Versions</a>
-<br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a>
-</p>
-
-<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27">
-<br><a href="tasks-96.htm">Checking out a project from a CVS repository</a>
-<br><a href="tasks-117.htm">Sharing a new project using CVS</a>
-<br><a href="tasks-119.htm">Viewing a File's Revision History</a>
-<br><a href="tasks-100a.htm">Branching</a>
-<br><a href="tasks-115.htm">Synchronizing with the repository</a>
-</p>
-
-<p>&nbsp;<br>
-<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
-</p>
-
-</BODY>
-</HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Replacing resources in the workbench</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1 CLASS="Head">Replacing resources in the workbench</H1><p>To replace workbench resources with versions in the repository:</p><ol>  <li>Select a resource in the Navigator view.</li>  <li>From the resource's pop-up menu, select one of the following menu items:     <UL>      <LI><b>Replace With &gt; Latest From Repository</b> - replace the workbench         resource with the latest resources currently committed to the branch that         the local project is shared with.</LI>      <LI><b>Replace With &gt; Branch or Version</b> - replace the workbench resource         with a specific version or branch that you select in the repository. When         you select this option, another window opens, so that you can browse through         the branch and version tags in the repository and select the one that         you want.</LI>      <LI><b>Replace With &gt; Revision</b> - (available only on a file) replace         the workbench file with another revision of the file. When you select         this option, a dialog opens to allow you to select a revision from the         list of available ones. A test window displays the comparison between         the local revision and the selected remote revision.</LI>    </UL>  </li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-26.htm">Team programming with CVS</a><br><a href="../concepts/concepts-27b.htm">Branches</a><br><a href="../concepts/concepts-27.htm">Versions</a><br><a href="../concepts/concepts-30.htm">Synchronizing with a CVS repository</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-96.htm">Checking out a project from a CVS repository</a><br><a href="tasks-117.htm">Sharing a new project using CVS</a><br><a href="tasks-119.htm">Viewing a File's Revision History</a><br><a href="tasks-100a.htm">Branching</a><br><a href="tasks-115.htm">Synchronizing with the repository</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
