*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def.htm
@@ -11,7 +11,8 @@
 <BODY BGCOLOR="#ffffff">
 <h2>
   What is a product?</h2>
-<p>An Eclipse based <b>product</b> is a stand-alone program built with Ecilpse.&nbsp;
+<p>An Eclipse based <b>product</b> is a stand-alone program built with the
+Eclipse platform.&nbsp;
 Products include all the code and plug-ins needed to run them.&nbsp; This
 includes a Java runtime environment (JRE) and the Eclipse platform code.&nbsp;
 The plug-in code, JRE, and Eclipse platform are typically installed with a
