--- a/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/product_def_primary.htm
@@ -25,10 +25,10 @@ manifest:</p>
 	<b>primary=&quot;true&quot;</b> 
 	application=&quot;org.eclipse.ui.workbench&quot;&gt;</font></pre>
 <p>The platform feature has been designated as a primary feature. Although it's
-possible to designate many features as primary features in the feature.xml file,
-only one primary feature gets control when the platform is launched.&nbsp; The
-primary feature is specified using the <b>-feature</b> command line option of
-eclipse.exe.&nbsp; Typically, a product only defines branding information for
+possible to designate many features as primary features in the <b> feature.xml</b> file,
+only one primary feature gets control when the platform is launched.&nbsp; This
+is controlled in the <b>install.ini </b>file underneath the <b>eclipse</b>
+directory.&nbsp; Typically, a product only defines branding information for
 one feature and designates this feature as the primary feature.&nbsp; </p>
 <p>The branding information for the feature is located in a plug-in of the same
 name as the primary feature.&nbsp; The files that designate and define branding
