--- a/bundles/org.eclipse.platform.doc.isv/guide/resAdv_derived.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resAdv_derived.htm
@@ -24,23 +24,25 @@ their source files.&nbsp; It is not practical for team providers to make
 decisions about which files are derived.&nbsp; The resource API provides a
 common mechanism for plug-ins to indicate the resources they create that are
 derived.</p>
-<p>Plug-ins may use <a href="../reference/api/org/eclipse/core/resources/IResource.html">IResource</a>.<b>setDerived(boolean)
+<p>Plug-ins may use <a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a>.<b>setDerived(boolean)
 </b>to indicate that a resource is derived from other resources. Newly created resources are not
 derived by default, so this
 method must be used to explicitly mark the resource as derived.&nbsp; A
 common use is to mark a subfolder of the project as derived when an
 &quot;output&quot; folder (such as the &quot;bin&quot; folder in Java projects)
 is created by the plug-in.</p>
-<p>Other plug-ins, usually team providers, can use <a href="../reference/api/org/eclipse/core/resources/IResource.html">IResource</a>.<b>isDerived
+<p>Other plug-ins, usually team providers, can use <a href="../reference/api/org/eclipse/core/resources/IResource.html"><b>IResource</b></a>.<b>isDerived
 </b>to determine whether a particular resource should be managed by the
 repository.&nbsp; Attempts to mark projects or the workspace root as derived will be
 ignored.</p>
-<p class="Note">Note:&nbsp; The concept of derived resources is provided for <b>other</b>
+<blockquote>
+<p><i>Note:&nbsp; The concept of derived resources is provided for other
 (non-team) plug-ins to indicate which resources are inappropriate for repository
 management.&nbsp; Special files created by team implementations to manage their
 data should not be marked as derived resources.&nbsp; See <a href="team_resources_private.htm">Team
 private resources</a> for a technique for marking team-related implementation
-resources hidden.</p>
+resources hidden.</i></p>
+</blockquote>
 <p>&nbsp;</p>
 
 <P >
