--- a/bundles/org.eclipse.platform.doc.isv/guide/resAdv_hooks.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resAdv_hooks.htm
@@ -54,12 +54,16 @@ which is called by the platform whenever a resource is moved or deleted.&nbsp;
 The team plug-in installs a move delete hook manager that can determine which
 team provider is managing a resource and invoke its specific hook.</P>
 
-<P class="Note" >Note:&nbsp; The move delete hook was designed specifically for
+<blockquote>
+
+<P ><i>Note:&nbsp; The move delete hook was designed specifically for
 use by the team core plug-in and other team repository provider clients.&nbsp;
 It is not intended for general use.&nbsp; Team providers should not install the
 hook using the extension point, but instead implement their hook in their
 RepositoryProvider class.&nbsp; See <a href="team_provider_hooks.htm">Team
-resource modification hooks</a> for more information about using these hooks.</P>
+resource modification hooks</a> for more information about using these hooks.</i></P>
+
+</blockquote>
 
 <h3 >
 File modification validators</h3>
@@ -79,12 +83,16 @@ opened.&nbsp;&nbsp; The team plug-in installs a file modification manager that
 can determine which team provider is managing a resource and invoke its specific
 validator.</P>
 
-<P class="Note" >Note:&nbsp; The file modification validator hook was designed
+<blockquote>
+
+<P ><i>Note:&nbsp; The file modification validator hook was designed
 specifically for use by the team core plug-in.&nbsp; It is not intended for
 general use.&nbsp; Team providers should not install the hook using the
 extension point, but instead implement their hook in their Repository Provider
 class.&nbsp;&nbsp; See <a href="team_provider_hooks.htm">Team resource
-modification hooks</a> for more information about using these hooks.</P>
+modification hooks</a> for more information about using these hooks.</i></P>
+
+</blockquote>
 
 <P >
 <a href="../hglegal.htm"><img border="0" src="../ngibmcpy.gif" alt="Copyright IBM Corp. and others 2000,2002."width="250" height="12"></a></P>
