--- a/bundles/org.eclipse.platform.doc.isv/guide/resAdv_natures.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/resAdv_natures.htm
@@ -150,7 +150,7 @@ proposed combinations of project natures using workspace API. </P>
 <H3>
 Nature descriptors</H3>
 <p>In addition to working with natures by their id, you can obtain the
-descriptor (<a href="../reference/api/org/eclipse/core/resources/IProjectNatureDescriptor.html">IProjectNatureDescriptor</a>)
+descriptor (<a href="../reference/api/org/eclipse/core/resources/IProjectNatureDescriptor.html"><b>IProjectNatureDescriptor</b></a>)
 which describes a nature, its constraints, and its label.&nbsp; You can query a
 particular nature for its descriptor, or get descriptors from the
 workspace.&nbsp; The following snippet gets the project nature descriptor for
