--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_actionDef.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_keyBindings_actionDef.htm
@@ -64,7 +64,7 @@ Your choice depends on where the action is defined.</p>
 
 
 <p>Actions that are instantiated in code can also be associated with an action
-definition using <a href="../reference/api/org/eclipse/jface/action/IAction.html">IAction</a>
+definition using <a href="../reference/api/org/eclipse/jface/action/IAction.html"><b>IAction</b></a>
 protocol.&nbsp; This is typically done when the action is created.&nbsp; The <b>WorkbenchActionBuilder</b>
 uses this technique to initialize its actions.&nbsp;&nbsp; </p>
 
