--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_workingsets.htm
@@ -18,7 +18,7 @@ techniques.</p>
 
 
 <ul>
-  <li><b><a href="workbench_advext_resourceFilters.htm">Resource filters</a></b>
+  <li><a href="workbench_advext_resourceFilters.htm">Resource filters</a>
     can be used to filter by file name.&nbsp; Plug-ins contribute resource
     filters that the user can enable using a view's filter selection dialog.</li>
   <li><b>Working sets</b> can be used to filter resources by only including
