--- a/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markerresolution.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/wrkAdv_markerresolution.htm
@@ -59,7 +59,7 @@ values.</p>
 
 
 <p>The marker resolution generator is responsible for returning an array of
-marker resolutions (<a href="../reference/api/org/eclipse/ui/IMarkerResolution.html">IMarkerResolution</a>)
+marker resolutions (<a href="../reference/api/org/eclipse/ui/IMarkerResolution.html"><b>IMarkerResolution</b></a>)
 that will be shown in the <b>Quick Fix...</b> dialog.&nbsp; The resolution will
 be <b>run()</b> if the user selects it in the dialog.&nbsp; Here is the
 implementation from <b>ReadmeMarkerResolutionGenerator</b>:</p>
