--- a/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
+++ b/bundles/org.eclipse.platform.doc.user/concepts/concepts-29.htm
@@ -50,10 +50,10 @@
   highlighted are what has changed in the workbench resource as compared to the 
   common ancestor, and what has been changed in the branch resource as compared 
   to the common ancestor. The sections that differ in all three files are highlighted 
-  as differences.&nbsp;Conflicts are shown in red, incoming changes in gray, and 
-  outgoing changes in blue. </p>
+  as differences.&nbsp;Conflicts are shown in red, incoming changes in blue, and 
+  outgoing changes in gray. </p>
   
-<p class="Para"> <img align="texttop" border="0" src="../images/Image49_3_way_compare.jpg" alt="Synchronize View with 3 way compare" >
+<p class="Para"> <img align="texttop" border="0" src="../images/Image49_3_way_compare.jpg" alt="Synchronize View with 3 way compare" width="539" height="626" >
    </p>
        
 <p><img border="0" src="../images/ngrelc.gif" alt="Related concepts"
