--- a/bundles/org.eclipse.platform.doc.user/tasks/tasks-70.htm
+++ b/bundles/org.eclipse.platform.doc.user/tasks/tasks-70.htm
@@ -1,1 +1,44 @@
-<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN"><HTML><HEAD><META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1"><META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css"><LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css"><title>Comparing resources with the local history</title><meta name="keyword" content="team"></HEAD><BODY BGCOLOR="#ffffff"><H1>Comparing resources with the local history</H1><p>To compare a workbench resource with a state in the local history:</p><ol>  <li>In the Navigator view, select the resource that you want to compare with     a local history state.</li>  <li>From the resource's pop-up menu, select <b>Compare With</b> &gt; <b>Local     History</b>. The Compare with Local History page opens.</li>  <li>Select a state in the <b>Local History</b> list. The Text Compare editor opens.</li>  <li>Click the <b>Select Next Change</b> and <b>Select Previous Change</b> buttons     to browse the changes made between the state in the local history and the     workbench resource.</li>  <li>Click <b>OK</b> when you are finished.</li></ol><p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br><a href="../concepts/concepts-17a.htm">Local history</a><br><a href="../concepts/concepts-27.htm">Versions</a></p><p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br><a href="tasks-87.htm">Replacing a resource with local history</a><br><a href="tasks-88.htm">Setting local history preferences</a><br><a href="tasks-68.htm">Comparing resources</a></p><p>&nbsp;<br><a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a></p></BODY></HTML>
+<!DOCTYPE HTML PUBLIC "-//W3C//DTD HTML 4.0 Transitional//EN">
+<HTML>
+<HEAD>
+<META HTTP-EQUIV="Content-Type" CONTENT="text/html; charset=ISO-8859-1">
+<META HTTP-EQUIV="Content-Style-Type" CONTENT="text/css">
+<LINK REL="STYLESHEET" HREF="../book.css" CHARSET="ISO-8859-1" TYPE="text/css">
+<title>Comparing resources with the local history</title>
+<meta name="keyword" content="team">
+</HEAD>
+
+<BODY BGCOLOR="#ffffff">
+<H1>Comparing resources with the local history</H1>
+<p>To compare a workbench resource with a state in the local history:
+</p>
+
+<ol>
+  <li>In the Navigator view, select the resource that you want to compare with 
+    a local history state.</li>
+  <li>From the resource's pop-up menu, select <b>Compare With</b> &gt; <b>Local 
+    History</b>. The Compare with Local History page opens.</li>
+  <li>Select a state in the <b>Local History</b> list. The Text Compare editor opens.</li>
+  <li>Click the <b>Select Next Change</b> and <b>Select Previous Change</b> buttons 
+    to browse the changes made between the state in the local history and the 
+    workbench resource.</li>
+  <li>Click <b>OK</b> when you are finished.</li>
+</ol>
+
+<p><img border="0" src="../images/ngrelc.gif" alt="Related concepts" width="159" height="27"><br>
+<a href="../concepts/concepts-17a.htm">Local history</a><br>
+<a href="../concepts/concepts-27.htm">Versions</a>
+</p>
+
+<p><img border="0" src="../images/ngrelt.gif" alt="Related tasks" width="159" height="27"><br>
+<a href="tasks-87.htm">Replacing a resource with local history</a><br>
+<a href="tasks-88.htm">Setting local history preferences</a><br>
+<a href="tasks-68.htm">Comparing resources</a>
+</p>
+
+<p>&nbsp;<br>
+<a href="../hglegal2002.htm"><img src = "../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation and others 2000, 2002" border="0"></a>
+</p>
+
+</BODY>
+</HTML>
