*** empty log message ***

--- a/bundles/org.eclipse.platform.doc.isv/guide/int_eclipse.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/int_eclipse.htm
@@ -59,7 +59,7 @@ The Eclipse platform itself is structured as subsystems which are implemented in
 one or more plug-ins.&nbsp; The subsystems are built on top of a small runtime engine.&nbsp; </P>
 
 <P >
-<img border="0" src="images/arch-npi.jpg" width="309" height="309"> </P>
+<img border="0" src="images/arch-npi.jpg" alt="" width="309" height="309"> </P>
 
 <P >
 The subsystems define extension points for adding behavior to the
