--- a/bundles/org.eclipse.platform.doc.isv/guide/swt.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/swt.htm
@@ -52,7 +52,7 @@ Platform integration is not strictly a matter of look and feel. Tight integratio
 interact with native desktop features such as drag and drop, integrate with OS desktop applications, and use components developed with OS component models like Win32
 ActiveX.</P>
 <P >
-<img border="0" src="images/win_only.gif" width="51" height="13">SWT ActiveX support is discussed in
+<img alt="Windows Only" border="0" src="images/win_only.gif" width="51" height="13">SWT ActiveX support is discussed in
 the article <a href="http://www.eclipse.org/articles/Article-ActiveX%20Support%20in%20SWT/ActiveX%20Support%20in%20SWT.html">ActiveX
 Support in SWT</a>.</P>
 <P >
