--- a/bundles/org.eclipse.platform.doc.isv/guide/team_resources_filetypes.htm
+++ b/bundles/org.eclipse.platform.doc.isv/guide/team_resources_filetypes.htm
@@ -68,7 +68,7 @@ to manage the list of text and binary file types.
 
 
 
-<p><img border="0" src="images/filetypes.jpg" width="606" height="532">
+<p><img border="0" src="images/filetypes.jpg" alt="" width="606" height="532">
 </p>
 
 
