package explorer tasks

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-185.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-185.htm
@@ -9,6 +9,18 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Showing and hiding Java files</h1>
-<p><br></p>
+<p>To show Java files: </p>
+<ol>
+  <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
+    menu.</li>
+  <li> Ensure that the <b>Hide Java files</b> filter is not selected.</li>
+</ol>
+To show Java files: 
+<ol>
+  <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
+    menu.</li>
+  <li> Ensure that the <b>Hide Java files</b> filter is selected.<br>
+  </li>
+</ol>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
