--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-186.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-186.htm
@@ -9,6 +9,19 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Showing and hiding non-Java elements</h1>
-<p><br></p>
+<p>To show non-Java elements: </p>
+<ol>
+  <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
+    menu.</li>
+  <li> Ensure that the <b>Hide non-Java elements</b> filter is not selected.</li>
+</ol>
+To show non-Java elements: 
+<ol>
+  <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
+    menu.</li>
+  <li> Ensure that the <b>Hide non-Java elements</b> filter is selected.</li>
+</ol>
+<p><br>
+</p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
