--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-184.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-184.htm
@@ -9,6 +9,25 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Showing and hiding empty parent packages</h1>
-<p><br></p>
+<p>To show empty parent packages: </p>
+<ol>
+  <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
+    menu.</li>
+  <li> Ensure that the <b>Hide empty parent packages</b> filter is not selected.</li>
+</ol>
+To show libraries: 
+<ol>
+  <li> Select the <b>Filters</b> command from the Package Explorer's drop-down 
+    menu.</li>
+  <li> Ensure that the <b>Hide empty parent packages</b> filter is selected.<br>
+  </li>
+</ol>
+<p><b>Note:</b></p>
+<p>What are parent packages?</p>
+<p>Pakage org.eclipse.ui has the following parent packages:</p>
+<p>(default package)</p>
+<p>org</p>
+<p>org.eclipse</p>
+<p>&nbsp;</p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
