--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-181.htm
@@ -18,6 +18,52 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head"> Using the Find/Replace dialog</h1>
-<p><br></p>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<p><br>
+  To open the Find / Replace dialog:</p>
+<ul>
+  <li>Optionally, select some text in a text (or Java) editor </li>
+  <li>Press <b>Ctrl+F </b>or</li>
+  <li>From the menu bar, select <b>Edit &gt; Find / Replace</b> </li>
+</ul>
+<ul>
+  <li>In the <b>Find</b> field, enter the text you want to replace</li>
+  <li>Optionally, in the <b>Replace With</b> field, enter the next text</li>
+  <li>Using the radio buttons in the <b>Direction</b> group, select the direction 
+    of finding occurrences (relative the current caret position)</li>
+  <li>In the <b>Scope</b> radio button group: 
+    <ul>
+      <li>Select the <b>Selected Lines</b> button if you want to limit find / 
+        replace to the lines you selected when opening the dialog</li>
+      <li>Select the <b>All</b> button otherwise</li>
+    </ul>
+  </li>
+  <li>In the <b>Options</b> group: 
+    <ul>
+      <li>Select the <b>Case Sensitive</b> checkbox if you want finding to be 
+        case sensitive</li>
+      <li>Select the <b>Whole Word</b> checkbox if you want to find / replace 
+        only those occurrences in which the text you entered in the <b>Find</b> 
+        field is a whole word </li>
+      <li>Select the <b>Wrap Search</b> checkbox if you want the dialog to continue 
+        from the top of the file once the bottom is reached (if you find / replace 
+        in Selected Lines only, then this option applies to those lines only)</li>
+      <li>Select the <b>Incremental</b> checkbox if you want to perform incremental 
+        find (e.g. the dialog will find matching occurrences while you are typing 
+        in the Find field) </li>
+    </ul>
+  </li>
+  <li>Press: 
+    <ul>
+      <li><b>Find</b> if you want to find the next matching occurrence</li>
+      <li><b>Replace</b>, if you want to replace the currently selected occurrence 
+        with the new text</li>
+      <li><b>Replace / Find</b>, if you want to replace the currently selected 
+        occurrence with the new text and find the next matching occurrence</li>
+      <li><b>Replace All</b>, if you want to replace all matching occurrences 
+        with the new text</li>
+    </ul>
+  </li>
+  <li>Press <b>Close</b> when you are done</li>
+</ul>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved."></a></p>
 </body></html>
