--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-182.htm
@@ -9,6 +9,17 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Using Incremental Find</h1>
-<p><br></p>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<p><br>
+  To use Incremental Find:</p>
+<ul>
+  <li>In the text (or Java) editor, press <b>Ctrl+J</b> or select <b>Edit &gt; 
+    Incremental Find</b> from the menu bar</li>
+  <li>The workbench status line displays Incremental Find: information which is 
+    updated as you type. The editor is now a the Incremental Find mode.</li>
+  <li>As you type, the editor finds the first occurrence of the text updates the 
+    selection after each character typed</li>
+</ul>
+<p>You can leave the Incremental Find mode by pressing <b>Esc</b>.</p>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved."></a> 
+</p>
 </body></html>
