--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-175.htm
@@ -18,6 +18,24 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Using QuickFix</h1>
-<p><br></p>
+<p>To use the QuickFix feature:</p>
+<ul>
+  <li>You need to have the <b>Window &gt; Preference &gt; Java &gt; Editor &gt; 
+    Problem Indication &gt; Show problems before compiling</b> checkbox selected.</li>
+  <li>In the Java editor, ff you see an error underlined with a squiggly line, 
+    position the caret inside the underlined range and do one of the following: 
+    <ul>
+      <li>Press <b>Ctrl+1</b> or</li>
+      <li>From the menu bar, select <b>Edit &gt; Quick Fix</b></li>
+    </ul>
+  </li>
+  <li>A list of suggested corrections is presented, with a preview displayed when 
+    an entry is selected.</li>
+  <li>Select an entry form the list and press <b>Enter</b>.<br>
+  </li>
+</ul>
+<p><b>Note:</b> Occassionally, invoking Quick Fix will not suggest any corrections. 
+  A message saying '<b>No suggestions available</b>' will be displayed in such 
+  cases.</p>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
