--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-176.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-176.htm
@@ -18,6 +18,30 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Using Structured Selection</h1>
-<p><br></p>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<p>&nbsp;</p>
+<p>Structured Selection lets you quickly select Java code in a syntax-aware way.</p>
+<p>To use Structured Selection:</p>
+<ul>
+  <li>In a Java editor, (optionally) select some text and press <b>Ctrl+Shift+Arrow 
+    Up</b> or select <b>Edit &gt; Expands Selection To &gt; Enclosing Element</b> 
+    from the menu bar.</li>
+  <li>The current text selection is expanded to the inner-most syntax element 
+    (more precisely, <u>A</u>bstract <u>S</u>yntax <u>T</u>ree node) that encloses 
+    the selection.<br>
+  </li>
+</ul>
+<p>When a statement or a list of statements is selected, you can press <b>Ctrl+Shift+Arrow 
+  Right</b> or select <b>Edit &gt; Expands Selection To &gt; Next Element</b>, 
+  which will expand the selection with the statement (if any exists) that is immediately 
+  <i>after</i> the selected statements.</p>
+<p>When a statement or a list of statements is selected, you can press <b>Ctrl+Shift+Arrow 
+  Left</b> or select <b>Edit &gt; Expands Selection To &gt; Previous Element</b>, 
+  which will expand the selection with the statement (if any exists) that is immediately 
+  <i>before</i> the selected statements.</p>
+<p>&nbsp;</p>
+<p>Pressing <b>Ctrl+Shift+Arrow Down</b> or selecting <b>Edit &gt; Expands Selection 
+  To &gt; Restore Last Selection </b>from the menu bar lets you restore the previous 
+  structured selection.</p>
+<p></p>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
