--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-179.htm
@@ -18,6 +18,23 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Using Surround with Try/Catch</h1>
-<p><br></p>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<p>&nbsp;</p>
+<p>To surround a statemnt or a set of statements with a try/catch block:</p>
+<ul>
+  <li>In the Java editor, select the statement or a set of statements that you 
+    want to surround with a try/catch block.</li>
+  <li>Do one of the following: 
+    <ul>
+      <li>From the menu bar, select <b>Source &gt; Surround with try/catch </b> 
+        or</li>
+      <li>From the editors pop-up menu, select <b>Source &gt; Surround with try/catch 
+        block </b></li>
+    </ul>
+  </li>
+  <li>'catch' blocks for all uncaught exceptions (if there are any) are created. 
+    If there are no uncaught exceptions, a dialog shows up informing you about 
+    this fact and asking if you want to create a 'catch' block for java.lang.RuntimeException.<br>
+  </li>
+</ul>
+<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved."></a></p>
 </body></html>
