find strings to nls

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-188.htm
@@ -7,5 +7,13 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Finding strings to externalize</h1>
+<p>To find strings to externalize:</p>
+<ul>
+  <li>In a Java view (e.g. Package Explorer), select a set (which can contain 
+    a sinlge element) of packages, source folders or projects.</li>
+  <li>From the menu bar, select <b>Source &gt; Find Strings to Externalize</b></li>
+  <li>A dialog comes up with a list of all compilation units that have some not-externalized 
+    strings</li>
+</ul>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
