nls-related tasks

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
@@ -18,6 +18,18 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Externalizing strings</h1>
-<p><br></p>
+<p><br>
+  To externalize strings:</p>
+<ul>
+  <li>Open the Externalize Strings wizard by doing one of the following: 
+    <ul>
+      <li>Finding strings to enternalize (using the <b>Find Strings To Enternalize</b> 
+        function), selecting an entry in the resulting dialog and pressing the 
+        <b>Externalize</b> button or</li>
+      <li>Selecting the compilation unit in which you want to externalize strings 
+        and selecting <b>Source &gt; Externalize Strings</b> from the menu bar</li>
+    </ul>
+  </li>
+</ul>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
