--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
@@ -21,13 +21,16 @@
 <p><br>
   To externalize strings:</p>
 <ul>
-  <li>Open the Externalize Strings wizard by doing one of the following: 
+  <li>To open the Externalize Strings wizard, do one of the following: 
     <ul>
-      <li>Finding strings to enternalize (using the <b>Find Strings To Enternalize</b> 
-        function), selecting an entry in the resulting dialog and pressing the 
-        <b>Externalize</b> button or</li>
-      <li>Selecting the compilation unit in which you want to externalize strings 
-        and selecting <b>Source &gt; Externalize Strings</b> from the menu bar</li>
+      <li>Find strings to externalize (using the <b>Find Strings To Enternalize</b> 
+        function), select an entry in the resulting dialog and press the <b>Externalize</b> 
+        button or</li>
+      <li>Selec the compilation unit in which you want to externalize strings 
+        and selecting <b>Source &gt; Externalize Strings</b> from the menu bar 
+        or</li>
+      <li>In the Java editor, select <b>Source &gt; Externalize Strings</b> from 
+        the pop-up menu</li>
     </ul>
   </li>
 </ul>
