nls wizard pages

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-189.htm
@@ -7,7 +7,9 @@
   </head>
 <body bgcolor="#ffffff">
 <h1 class="Head">Key/value page</h1>
-<h1 class="Head">&nbsp;</h1>
+<h1 class="Head"><img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-189a.gif" width="507" height="708" alt="Externalize Strings Key/value page"></h1>
+<br>
+Externalize Strings Key/value page
 <ul>
   <li>In the <b>Enter common prefix for generated keys</b> text field, you can 
     specify an optional prefix that will be used for all keys.</li>
