--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-190.htm
@@ -2,10 +2,45 @@
   <meta http-equiv="Content-Type" content="text/html; charset=ISO-8859-1">
   <meta http-equiv="Content-Style-Type" content="text/css">
   <link rel="STYLESHEET" href="../book.css" charset="ISO-8859-1" type="text/css">
-  <title>Property file page</title>
+  <title>Property File page</title>
 
   </head>
 <body bgcolor="#ffffff">
-<h1 class="Head">Property file page</h1>
+<h1 class="Head">Property File page</h1>
+<img src="file:///D|/eclipseWorkbench5/plugins/org.eclipse.jdt.doc.user/images/tasks-190a.gif" alt="Externalize Strings Property File page"/> 
+<br>
+Externalize Strings Property File page 
+<ul>
+  <li>In the <b>Package</b> field, enter the name fo the package in which you 
+    want the wizard to locate the property file (you can use the <b>Browse</b> 
+    button to display the list of all packages)</li>
+  <li>In the Property file name field, enter the name of the property file (new 
+    or existing) in which the externalized strings will be put (you can use the 
+    <b>Browse</b> button to display the list of all .properties files located 
+    in the package selected in the Package field.)</li>
+  <li>Select the <b>Create resource bundle accessor class</b> checkbox if you 
+    want to create a class that will be used to access the externalized strings 
+    (Note: the class will be reused if it exists already).</li>
+  <li>In the <b>Class name</b> field, ff you have the above-mentioned checkbox 
+    selected, you can specify the name of the accessor class</li>
+  <li>Press <b>Next</b> to see a preview of the modifications or press <b>Finish</b> 
+    to externalize strings without previewing changes.</li>
+</ul>
+<p><b>Note: </b>The default behavior of the wizard (i.e. creating a class with 
+  a name specified in the <b>Class name field</b> and using <b>getString</b> as 
+  the name of the method used to retrieve strings from the property file) can 
+  be overriden. You may want to do so if you already have an accessor class in 
+  another package or you accessor class uses another a method with another name 
+  to get strings from the propetry file.</p>
+<ul>
+  <li> Unselect the <b>Use default substitution pattern</b> checkbox</li>
+  <li>In the <b>Substitution pattern</b> field enter the new pattern that will 
+    be used to retrieve strings from the property file. For each externalized 
+    string, the first occurrence of <b>${key}</b> will be substituted with the 
+    key.</li>
+  <li>Use the <b>Add import declaration</b> field if you want the wizard to add 
+    an addtional import to the compilation unit (you can use the <b>Browse</b> 
+    button to help you find a class that you want to import.)</li>
+</ul>
 <p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
