--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-180.htm
@@ -34,5 +34,8 @@
     </ul>
   </li>
 </ul>
-<p>&nbsp;<a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
+<p><b>&nbsp;Note</b>: Externalizing strings is undoable (with the same restrictions 
+  as for refactorings). Use <b>Refactor &gt; Undo</b> from the menu bar to undo 
+  externalizing strings.</p>
+<p><a href="../hglegal2002.htm"><img src="../images/ngibmcpy2002.gif" alt="Copyright IBM Corporation 2000, 2002. All Rights Reserved." border="0" width="324" height="14"></a></p>
 </body></html>
