*** empty log message ***

--- a/bundles/org.eclipse.jdt.doc.isv/questions/index.html
+++ b/bundles/org.eclipse.jdt.doc.isv/questions/index.html
@@ -19,8 +19,10 @@ JDT Core</h2>
     platform?</a></li>
   <li><a href="../guide/jdt_api_compile.htm">How do I programmatically compile a
     Java program?</a></li>
-  <li><a href="../guide/jdt_api_manip.htm">How do I programmatically generate
+  <li><a href="../guide/jdt_api_manip.htm">How do I manipulate
     Java code?</a></li>
+  <li><a href="../guide/jdt_api_search.htm">How do I use the Java search 
+    engine?</a></li>
   <li><a href="../guide/jdt_int_elements.htm">How are Java projects, folders,
     and files different from regular resources?</a></li>
   <li><a href="../guide/jdt_int_devprocess.htm">What is available in the JDT
