--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-9.htm
@@ -13,7 +13,7 @@ Changing debugger launch options</H1>
 <ol>
   <li>
 <p CLASS="Head">
-Select <b>Workbench</b> &gt; <b>Preferences</b> &gt; <b>Debug</b>.</li>
+Select <b>Window</b> &gt; <b>Preferences</b> &gt; <b>Debug</b>.</li>
 <li>
 <P CLASS="Para">
 Setting the <b> <SPAN CLASS="Label">
