Bold not closed properly

--- a/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
+++ b/bundles/org.eclipse.jdt.doc.user/tasks/tasks-130.htm
@@ -40,7 +40,7 @@ If you selected a Java project, you may be prompted to select the class you wish
 Launching from other views and editors</h2>
 <P CLASS="Para">
 You can launch a program without first selecting it in the Packages or Navigator view. For example, if the active editor is open on the program you wish to launch, you can select 
-  <b><SPAN CLASS="Label">Run &gt; Debug As &gt; Java Application</SPAN></b> or <b><SPAN CLASS="Label">Run &gt; Run As &gt; Java Application</SPAN><b></P>
+  <b><SPAN CLASS="Label">Run &gt; Debug As &gt; Java Application</SPAN></b> or <b><SPAN CLASS="Label">Run &gt; Run As &gt; Java Application</SPAN></b></P>
 <h2>
 Launching with another launch configuration type</h2>
 <P CLASS="Para">
