--- a/bundles/org.eclipse.jdt.doc.user/concepts/concepts-10.htm
+++ b/bundles/org.eclipse.jdt.doc.user/concepts/concepts-10.htm
@@ -30,13 +30,10 @@ The debugger has a client/server design so you can debug programs running remote
 a VM</a><br>
 <a href="../tasks/tasks-138.htm">Evaluating 
 expressions</a><br>
-<a href="../tasks/tasks-130.htm">Launching a Java 
-program</a><br>
+<a href="../tasks/tasks-130.htm">Launching a Java program</a><br>
 <a href="../tasks/tasks-133.htm">Preparing to debug</a><br>
-<a href="../tasks/tasks-135.htm">Resuming the 
-execution of suspended threads</a><br>
-<a href="../tasks/tasks-126.htm">Running and 
-debugging</a><br>
+<a href="../tasks/tasks-135.htm">Resuming the execution of suspended threads</a><br>
+<a href="../tasks/tasks-126.htm">Running and debugging</a><br>
 <a href="../tasks/tasks-134.htm">Suspending threads</a><br>
 <br>
 &nbsp;</p>
